force-app/main/default/objects/leankor__Chart__c/leankor__Chart__c.object-meta.xml
<CustomObject>
    <description>Holds the Report charts that are floating frames on top of the Kanban and Whiteboard board types. There can be more than one chart on each board.</description>
    <label>Chart</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Chart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>