force-app/main/default/objects/leankor__Chart__c/fields/leankor__ChartURL__c.field-meta.xml
<CustomField>
    <fullName>leankor__ChartURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ChartURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>