force-app/main/default/objects/leankor__Chart__c/fields/leankor__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>leankor__DeveloperName__c</fullName>
    <description>The Developer Name is unique Name of Report.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Developer Name is unique Name of Report.</inlineHelpText>
    <label>DeveloperName</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>