force-app/main/default/objects/leankor__Chart__c/fields/leankor__Filter__c.field-meta.xml
<CustomField>
    <fullName>leankor__Filter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>