force-app/main/default/objects/leankor__Chart__c/fields/leankor__Format__c.field-meta.xml
<CustomField>
    <fullName>leankor__Format__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Format</label>
    <length>40</length>
    <type>Text</type>
</CustomField>