force-app/main/default/objects/leankor__Chart__c/fields/leankor__GUID__c.field-meta.xml
<CustomField>
    <fullName>leankor__GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>&quot;503ee49a-8489-4091-bf76-8a07048066f5&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Enter a valid GUID such as &quot;503ee49a-8489-4091-bf76-8a07048066f5&quot;</inlineHelpText>
    <label>GUID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>