force-app/main/default/objects/leankor__Chart__c/fields/leankor__JSONData__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONData__c</fullName>
    <defaultValue>&quot;[]&quot;</defaultValue>
    <description>This field used to store report chart filter JSON data.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>