force-app/main/default/objects/leankor__Chart__c/fields/leankor__LockState__c.field-meta.xml
<CustomField>
    <fullName>leankor__LockState__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Lock State of Image on page.</description>
    <inlineHelpText>Enter the Lock State of Image on page.</inlineHelpText>
    <label>LockState</label>
    <type>Checkbox</type>
</CustomField>