force-app/main/default/objects/leankor__Chart__c/fields/leankor__OnlyShowChart__c.field-meta.xml
<CustomField>
    <fullName>leankor__OnlyShowChart__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Only Show Chart</label>
    <type>Checkbox</type>
</CustomField>