force-app/main/default/objects/leankor__Chart__c/fields/leankor__ReportId__c.field-meta.xml
<CustomField>
    <fullName>leankor__ReportId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ReportId</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>