force-app/main/default/objects/leankor__Chart__c/fields/leankor__Top__c.field-meta.xml
<CustomField>
    <fullName>leankor__Top__c</fullName>
    <description>The top coordinate of the Chart on the page.</description>
    <inlineHelpText>Enter the top coordinate of the Chart on the page.</inlineHelpText>
    <label>Top</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>