force-app/main/default/objects/leankor__Chart__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The value stream upon-which this chart image is to be placed.</description>
    <inlineHelpText>Enter the value stream upon-which this chart image is to be placed.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Charts</relationshipLabel>
    <relationshipName>Charts</relationshipName>
    <type>Lookup</type>
</CustomField>