force-app/main/default/objects/leankor__Chart__c/fields/leankor__Width__c.field-meta.xml
<CustomField>
    <fullName>leankor__Width__c</fullName>
    <description>The width in pixels of the image Chart on the page.</description>
    <inlineHelpText>Enter the width in pixels of the image Chart on the page.</inlineHelpText>
    <label>Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>