force-app/main/default/objects/leankor__Chart__c/fields/leankor__X__c.field-meta.xml
<CustomField>
    <fullName>leankor__X__c</fullName>
    <label>X Coordinate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>